nowrap table, refactor print statement, fix host regex, change column name from Name to Page

--- a/src/styledown/styles.css
+++ b/src/styledown/styles.css
@@ -252,6 +252,10 @@ th {
   color: var(--muted);
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 /* =========================================================
    Colors
 ========================================================= */
